--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     
-    <title>Pioneering Test App</title>
+    <title>Judicial Asset</title>
     <style>
       ::-webkit-scrollbar {
         width: 10px;
